<resources>
    <string name="app_name">酷酷音乐</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_failed">刷新失败</string>
    <string name="pull_up_to_load">上拉加载更多</string>
    <string name="release_to_load">释放加载更多</string>
    <string name="loading">努力加载中…</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_failed">加载失败</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="menu_setting">功能设置</string>
    <string name="menu_leak_canary">内存泄漏</string>
    <string name="menu_about">关于应用</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_theme">切换主题</string>
    <string name="menu_weather">查询天气</string>
    <string name="search_location">搜索地址</string>
    <string name="menu_timer">定时停止</string>
    <string name="menu_location">记录位置</string>
    <string name="menu_exit">退出应用</string>
    <string name="local_music">本地音乐</string>
    <string name="online_music">在线音乐</string>
    <string name="unknown">未知</string>
    <string name="unable_to_share">暂时无法分享</string>
    <string name="share">分享</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="tips">温馨提示</string>
    <string name="music_title">标题</string>
    <string name="music_artist">歌手</string>
    <string name="music_album">专辑</string>
    <string name="music_lyric">歌词</string>
    <string name="music_file_size">大小</string>
    <string name="music_duration_time">时长</string>
    <string name="music_path">路径</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="unable_to_download">暂时无法下载</string>
    <string name="search_empty">未找到相关结果</string>
    <string name="search_tips">歌曲名、歌手名</string>
    <string name="setting_ringtone_success">设置闹铃声成功</string>
    <string name="no_permission_storage">没有存储空间权限，无法扫描本地歌曲！</string>
    <string name="no_permission_download">没有存储空间权限，无法下载在线音乐！</string>
    <string name="no_permission_setting">没有权限，无法设置铃声，请授予权限</string>
    <string name="no_permission_location">没有位置信息权限，无法更新天气！</string>
    <string name="grant_permission_setting">授权成功，请在再次操作以设置铃声</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="timer_time_set_description">分钟后停止</string>
    <string name="timer_stop_time">停止时间</string>
    <string name="network">联网相关</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="system_setting">系统设置</string>
    <string name="service_unavailable">服务不可用</string>
    <string name="get_weather_info_fail">无法提供天气信息</string>
    <string name="play_time_start">00:00</string>

    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="now_download">正在下载：%s</string>
    <string name="download_success">%s下载完成</string>
    <string name="delete_music">删除%s？</string>

    <string name="weather_temp">%s°</string>
    <string name="weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>

    <string name="default_tv_title">百度热歌榜</string>
    <string name="default_tv_update_date">最近更新：2016-01-03</string>
    <string name="default_tv_comment">该榜单是根据百度音乐平台歌曲每周播放量自动生成的数据榜单，统计范围为百度音乐平台上的全部歌曲，每日更新一次</string>
    
    <string-array name="online_music_list_title">
        <item>主打榜单</item>
        <item>百度热歌榜</item>
        <item>百度新歌榜</item>
        <item>分类榜单</item>
        <item>华语金曲榜</item>
        <item>欧美金曲榜</item>
        <item>影视金曲榜</item>
        <item>情歌对唱榜</item>
        <item>网络歌曲榜</item>
        <item>经典老歌榜</item>
        <item>摇滚榜</item>
        <item>媒体榜单</item>
        <item>KTV热歌榜</item>
        <item>Billboard</item>
        <item>Hito中文榜</item>
        <item>叱咤歌曲榜</item>
    </string-array>

    <string-array name="online_music_list_type">
        <item>#</item>
        <item>2</item>
        <item>1</item>
        <item>#</item>
        <item>20</item>
        <item>21</item>
        <item>24</item>
        <item>23</item>
        <item>25</item>
        <item>22</item>
        <item>11</item>
        <item>#</item>
        <item>6</item>
        <item>8</item>
        <item>18</item>
        <item>7</item>
    </string-array>

</resources>
