<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_setting"
            android:icon="@mipmap/ic_menu_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/action_night"
            android:icon="@mipmap/ic_menu_night"
            android:title="@string/menu_night" />
        <item
            android:id="@+id/action_theme"
            android:icon="@mipmap/ic_menu_night"
            android:title="@string/menu_theme"/>
        <item
            android:id="@+id/action_weather"
            android:icon="@mipmap/ic_menu_night"
            android:title="@string/menu_weather"/>
        <item
            android:id="@+id/action_location"
            android:icon="@mipmap/ic_menu_night"
            android:title="@string/menu_location"/>
        <item
            android:id="@+id/action_timer"
            android:icon="@mipmap/ic_menu_timer"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/action_exit"
            android:icon="@mipmap/ic_menu_exit"
            android:title="@string/menu_exit" />
        <item
            android:id="@+id/action_leak_canary"
            android:icon="@mipmap/ic_menu_exit"
            android:title="@string/menu_leak_canary"/>
        <item
            android:id="@+id/action_about"
            android:icon="@mipmap/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>